User-1 Feature create user: Implementation of the suggested changes in PR
