# src/main/java/com/example/usermanageapirest/application/controller/request/UserCreateRequest.java
@@ -4,25 +4,26 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import lombok.experimental.Accessors;
 
 import javax.validation.constraints.Max;
 import javax.validation.constraints.Min;
 import javax.validation.constraints.NotNull;
 
 @Data
-@NoArgsConstructor
+@Accessors(chain = true)
 @Schema(name = "CreateUserRequest", required = true)
 public class UserCreateRequest {
 
-	@JsonProperty("firstname")
+	@JsonProperty("firstName")
 	@Schema(required = true, description ="User's first name. Validation errors: REQUIRED")
 	@NotNull(message = "REQUIRED")
-	private String firstname;
+	private String firstName;
 
-	@JsonProperty("lastname")
+	@JsonProperty("lastName")
 	@Schema(required = true, description ="User's last name. Validation errors: REQUIRED")
 	@NotNull(message = "REQUIRED")
-	private String lastname;
+	private String lastName;
 
 	@JsonProperty("age")
 	@Schema(required = true, description ="User's age. Validation errors: REQUIRED")
